# filterforge

./: .gitignore  CMakeLists.txt  Makefile  test.scm
guile/: .filter.scm.swp
include/: component.h  config.h  config_input.h  config_output.h  filter.h  load.h  measurement.h  memory.h  preferred_value.h  random.h  two_port_network.h
src/: CMakeLists.txt  component.c  config_input.c  config_output.c  filter.c  init.c  load.c  measurement.c  objective.c  optimize.c  preferred_value.c  preferred_value.h  random.c  two_port_network.c
test/: CMakeLists.txt  component.test.c  config_input.test.c  filter.test.c  load.test.c  measurement.test.c  preferred_value.test.c  test-component.scm  test-load.scm  test-preferred-value.scm  test_filter.json  two_port_network.test.c
